# prime_decomposition

./: CMakeLists.txt
include/: prime_decomposition.h  sieve.h  utils.h
src/: main.cpp  prime_decomposition.cpp  sieve.cpp  utils.cpp
